--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
-    "@supabase/supabase-js": "^2.48.1",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.49.1",
     "expo": "~52.0.28",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-calendar": "~14.0.6",
     "expo-constants": "~17.0.5",
@@ -30,6 +32,7 @@
     "expo-image": "~2.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
